<resources>
    <!-- *** TEXT ***-->
    <string name="txtLocalBusiness"> Local Business </string>
    <string name="txtShopLocal"> Local Healthy Shopping </string>
    <string name="txtWelcomeToOrganicFoodStore"> Welcome To Organic Food Store </string>
    <string name="txtLocalFarmer"> Local Farmers </string>
    <string name="txtPrevious"> Previous </string>
    <string name="txtLocalFarmerJoe"> Farmer Joe Bloggs </string>
    <string name="txtLocalFarmerMary"> Farmer Bloody Mary </string>
    <string name="txtProductNumber"> Product Number </string>

    <!-- *** BUTTONS ***-->
    <string name="btnFood"> Food &amp; Drink </string>
    <string name="btnEntertainment"> Entertainment </string>
    <string name="btnFitness"> Health &amp; Fitness </string>
    <string name="btnLocalFarmer"> Local Farmers Products </string>
    <string name="btnBakery"> Local Bakery </string>
    <string name="btnPrevious"> Previous </string>
    <string name="btnBuy"> Buy </string>

    <!-- *** APP & ACTIVITY TEXT NAMES ***-->
    <string name="app_name">KeepItLocal</string>
    <string name="title_activity_food_ndrink">FoodNDrink</string>
    <string name="title_activity_fruit_nveg">FruitNVeg</string>
    <string name="title_activity_organic_food">OrganicFood</string>

    <string name="action_settings">Settings</string>

</resources>
