<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="murph.ie.keepitlocal.MainActivity">

    <TextView
        android:text="@string/txtShopLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="5"
        android:gravity="center"
        >
        <!-- weightSum="5">  or however many buttons there are -->
        <!-- gravity="center">  center everything within element -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLocalBusiness"
            />

        <Button
            android:id="@+id/btnFoodNDrink"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btnFood"
            />

        <Button
            android:id="@+id/btnHealthNFitness"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btnFitness"
            />

        <Button
            android:id="@+id/btnEntertainment"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btnEntertainment"
            />

        <!-- other buttons go here -->

    </LinearLayout>

</RelativeLayout>
